client/src/components/Countdown.module.css
.bossHalo {
  display: flex;
  flex-direction: row;
  width: 40rem;
  padding: 1.2rem;
  margin-top: 3rem;
  justify-content: center;
  align-items: center;
  aspect-ratio: 7.5;
  position: relative;
  z-index: 0;

  --halo-colour: var(--ctp-peach);
  --animation-duration: 12s;
}

@property --angle {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: false;
}

.bossHalo::after,
.bossHalo::before {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  background: white;
  background-image: conic-gradient(
    from var(--angle),
    var(--ctp-surface0) 25%,
    var(--halo-colour),
    var(--ctp-surface0)
  );
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  z-index: -1;
  border-radius: 53px;
  animation: var(--animation-duration) spin linear infinite;
}

.bossHalo::before {
  filter: blur(1.5rem);
  opacity: 0.7;
}

/* Calculated based on (fixed) aspect ratio. */
@keyframes spin {
  0% {
    --angle: 0deg;
  }
  19.85% {
    --angle: 75.07deg;
  }
  22.06% {
    --angle: 82.41deg;
  }
  25% {
    --angle: 90deg;
  }
  27.94% {
    --angle: 97.59deg;
  }
  30.15% {
    --angle: 104.93deg;
  }
  50% {
    --angle: 180deg;
  }
  69.85% {
    --angle: 255.07deg;
  }
  72.06% {
    --angle: 262.41deg;
  }
  75% {
    --angle: 270deg;
  }
  77.94% {
    --angle: 277.59deg;
  }
  80.15% {
    --angle: 284.93deg;
  }
  100% {
    --angle: 360deg;
  }
}

.bossTitleCard {
  display: flex;
  flex-direction: row;
  background: var(--ctp-mantle);
  border-radius: 48px;
  width: inherit;
  height: inherit;
  min-height: 100%;
  min-width: 100%;
  padding: 0.6rem;
  justify-content: center;
  flex-grow: 1;
  gap: 1rem;
  white-space: nowrap;
}

.bossSkull {
  background-image: url(/pixelskull.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  min-height: 80%;
  min-width: 10%;
  justify-items: center;
  animation: slam 1.2s ease-in-out;
}

@keyframes slam {
  0% {
    opacity: 0;
  }
  10% {
    opacity: 1;
    transform: scale(3);
  }
  30% {
    transform: translateY(100px);
  }
  90% {
    transform: scale(1);
  }
  100% {
    transform: translateY(-10px);
  }
}

.title {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  text-align: center;
  font-family: Cambria, Helvetica, Arial;
  font-size: 2.7rem;
  font-weight: 600;
  align-self: center;
  white-space: nowrap;
  position: relative;
}

.verticalRule {
  margin: 0 1rem;
  background-color: var(--ctp-surface0);
  border: none;
  height: 5rem;
  width: 5px;
}

.bossName {
  color: var(--ctp-peach);
}

.timer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-size: 2rem;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
}

